--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,12 @@
 # Visual Studio cache directory
 .vs/
 
+# Rider plugin cache directory
+.idea/
+
+# Visual Studio Code workspace directory
+.vscode/
+
 # Gradle cache directory
 .gradle/
 
